@@ -22,36 +22,52 @@ public class YamlListDetectorTest extends BasePlatformTestCase {
 
 	public void testBasicYamlList() {
 		var blocks = getBlocks("""
-			 list:
-			  - item1
-			  - item2
-			  - item3
-			 """);
-		assertEquals(3, blocks.size());
+				list:
+				  - item1
+				  - item2
+				  - item3
+				""");
+		assertEquals(1, blocks.size());
 
-		for (var b : blocks) {
-			assertEquals(2, b.size());
-			assertEquals("-", b.get(0).key());
-			assertEquals(" ", b.get(1).key());
-		}
+		var block = blocks.getFirst();
+		assertEquals(3, block.size());
+		for (var prop : block.props())
+			assertEquals("  - ", prop.key());
+	}
+
+	public void testNestedListProps() {
+		var blocks = getBlocks("""
+				steps:
+				  - foo: 2
+				    prop0:
+				      baz: 1
+				  - bar: 4
+				    prop1: 5
+				""");
+		assertEquals(1, blocks.size());
+
+		var block = blocks.getFirst();
+		assertEquals(4, block.size());
+		assertEquals("  - ", block.get(0).key());
+		assertEquals("    ", block.get(1).key());
+		assertEquals("  - ", block.get(2).key());
+		assertEquals("    ", block.get(3).key());
+	}
+
+	public void testSkipsItemWithValueOnNextLine() {
+		var blocks = getBlocks("""
+				list:
+				  -
+				    item1
+				  - item2
+				  - item3
+				""");
+		assertEquals(1, blocks.size());
+		assertEquals(2, blocks.getFirst().size());
 	}
 
 	public void testIgnoresInlineList() {
-		var blocks = getBlocks("""
-			 list: [a, b, c]
-			 """);
+		var blocks = getBlocks("list: [a, b, c]");
 		assertTrue(blocks.isEmpty());
-	}
-
-	public void testIgnoresListWithMultiLineItems() {
-		var blocks = getBlocks("""
-			 list:
-			  -
-			    item1
-			  - item2
-			 """);
-		// In this case, hyphen and value are on different lines for the first item
-		// YamlListDetector checks doc.getLineNumber(hyphenStart) == doc.getLineNumber(contentStart)
-		assertEquals(1, blocks.size());
 	}
 }
